# 5130_Final_Project_Racial_Bias_Monitoring

./: .gitignore  EDA.ipynb  README.md  Validated_Name.ipynb  bias_quantification.py  dashboard.py  environment.yml  gemini_interface.py  gemini_main.py  main.py  ollama_main.py  power_analysis.py  pyproject.toml  requirements.txt
bias_analysis/: bias_quantification.py
data/: racial_markers.csv  resume1.json  resume1.jsonl
data_persistence/: data_persistence.py
input_layer/: input.py
model_interface/: base_model.py  gemini_interface.py  main.py  ollama_interface.py
prompt_layer/: prompt_standardization.py
results/: llm_outputs.csv
tests/: bias_quantification_test.py  data_persistence_test.py  input_test.py  model_interface_test.py  pipeline_test.py  prompt_test.py
